--- a/index.html
+++ b/index.html
@@ -4,87 +4,105 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Crystal Ball — India</title>
-<meta name="description" content="Read the day’s headline and make one clean wealth decision. Track how compounding reacts to your calls.">
-<meta name="theme-color" content="#f6de9b">
+<meta name="description" content="Read a real headline. Make one clean wealth decision. Track how compounding responds.">
+<meta name="theme-color" content="#0b1b2b">
 <meta property="og:title" content="Crystal Ball — India">
-<meta property="og:description" content="Make one clean wealth decision from today-style news. See compounding at work.">
+<meta property="og:description" content="Make one clean wealth decision from a monthly headline. See compounding at work.">
 <style>
   :root{
-    --paper:#f6de9b;      /* refined newsprint */
-    --paper-2:#fff4c8;
-    --ink:#1c1b19;        /* deep ink */
-    --muted:#6d5f4a;      /* caption */
-    --line:#d9c18d;       /* hairline */
-    --cta:#0b5cad;        /* blue accent */
-    --cta-2:#0f7a48;      /* green accent */
-    --card:#fff7df;       /* soft panel */
-    --chip:#f3d68d;       /* tag */
-    --shadow:0 14px 32px rgba(0,0,0,.08);
+    --ink:#0b1b2b;        /* deep navy = trust */
+    --ink-2:#132a40;
+    --paper:#f7f6f3;      /* warm ivory */
+    --line:#d9d7d2;
+    --muted:#6a7380;
+    --accent:#1f7a5e;     /* calm green */
+    --accent-2:#276fca;   /* blue cta */
+    --card:#ffffff;
+    --shadow:0 14px 34px rgba(9,18,28,0.12);
   }
   *{box-sizing:border-box}
   html,body{height:100%}
   body{
-    margin:0; color:var(--ink);
+    margin:0;color:var(--ink);
     font-family: ui-serif, Georgia, "Times New Roman", Times, serif;
     background:
-      radial-gradient(1200px 900px at 10% -20%, var(--paper-2), var(--paper) 60%, #f2d78f 100%),
-      linear-gradient(180deg,#fff3cc,#f2d78f 80%);
+      radial-gradient(1200px 900px at 10% -20%, #fbfaf7, var(--paper) 60%, #f0efe9 100%),
+      linear-gradient(180deg,#fbfbfb,#f0efe9 80%);
   }
-  a{color:var(--cta);text-decoration:none}
+  a{color:var(--accent-2);text-decoration:none}
   a:hover{text-decoration:underline}
-  .wrap{max-width:1140px;margin:0 auto;padding:0 16px}
+  .wrap{max-width:1160px;margin:0 auto;padding:0 18px}
   /* header */
   header{
-    position:sticky;top:0;z-index:50;
-    background:linear-gradient(180deg,rgba(255,255,255,.6),rgba(255,255,255,0));
-    border-bottom:1px dashed var(--line);
-    backdrop-filter: blur(6px);
+    position:sticky;top:0;z-index:40;
+    background:linear-gradient(180deg, rgba(255,255,255,.8), rgba(255,255,255,0));
+    border-bottom:1px solid var(--line);
+    backdrop-filter: saturate(140%) blur(8px);
   }
-  .nav{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:14px 0}
-  .brand{display:flex;align-items:center;gap:10px}
-  .logo{width:32px;height:32px;border-radius:6px;background:#111;color:#fff;display:grid;place-items:center;
-        font-weight:800;font-family:ui-monospace,SFMono-Regular,Menlo,monospace;letter-spacing:.3px}
-  .title{margin:0;font-size:18px;letter-spacing:.2px}
+  .nav{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
+  .brand{display:flex;align-items:center;gap:12px}
+  .logo{width:36px;height:36px}
+  .title{margin:0;font-size:18px;letter-spacing:.2px;color:var(--ink-2)}
   .cta{
-    display:inline-flex;align-items:center;gap:8px;padding:10px 16px;border-radius:12px;border:1px solid var(--line);
-    background:linear-gradient(180deg,#fff0b8,#ffe180);color:#1c1b19;font-weight:900;letter-spacing:.3px;
-    box-shadow:0 10px 24px rgba(0,0,0,.06);
+    display:inline-flex;align-items:center;gap:10px;
+    padding:11px 16px;border-radius:12px;border:1px solid var(--line);
+    background:linear-gradient(180deg,#f3f7ff,#e8f0ff);
+    color:#0b1b2b;font-weight:900;letter-spacing:.3px;
+    box-shadow:0 10px 24px rgba(16,26,36,.08);
   }
   /* hero */
-  .hero{display:grid;grid-template-columns:1.15fr .85fr;gap:24px;padding:28px 0}
+  .hero{display:grid;grid-template-columns:1.1fr .9fr;gap:22px;padding:32px 0}
   @media (max-width:980px){.hero{grid-template-columns:1fr}}
-  .hero h1{font-size:42px;line-height:1.12;margin:0 0 10px 0;letter-spacing:.1px}
+  .hero h1{font-size:44px;line-height:1.12;margin:0 0 10px 0;letter-spacing:.1px}
   .hero p{margin:0;color:var(--muted)}
-  .actions{display:flex;gap:12px;margin-top:16px;flex-wrap:wrap}
-  .btn{appearance:none;border:1px solid var(--line);border-radius:12px;cursor:pointer;padding:12px 16px;
-       font-weight:900;letter-spacing:.3px;background:#fff4c1;box-shadow:0 6px 16px rgba(0,0,0,.06)}
-  .btn.primary{background:linear-gradient(180deg,#e7f8ec,#d3f2de);border-color:#c3e6cf}
-  .btn.secondary{background:linear-gradient(180deg,#fff4d0,#ffeaa4)}
-  .card{border:1px solid var(--line);border-radius:14px;background:linear-gradient(180deg,#fff8e6,#fff3d6);box-shadow:var(--shadow)}
+  .actions{display:flex;gap:12px;margin-top:18px;flex-wrap:wrap}
+  .btn{appearance:none;border:1px solid var(--line);border-radius:12px;cursor:pointer;padding:12px 18px;
+       font-weight:900;letter-spacing:.3px;background:#f6f9ff;box-shadow:0 6px 16px rgba(16,26,36,.06)}
+  .btn.primary{background:linear-gradient(180deg,#e6f4ee,#d8efe6);border-color:#cde6db}
+  .btn.secondary{background:linear-gradient(180deg,#f3f7ff,#e8f0ff)}
+  /* card */
+  .card{border:1px solid var(--line);border-radius:16px;background:var(--card);box-shadow:var(--shadow)}
   .in{padding:18px}
-  /* preview */
-  .preview{
-    border:1px dashed var(--line);border-radius:10px;background:#fffdf2;padding:14px;display:grid;gap:10px
+  /* article window */
+  .article{
+    border:1px solid var(--line);border-radius:14px;background:#fff;overflow:hidden;
   }
-  .headline{font-size:24px;line-height:1.25;margin:0;font-weight:800}
-  .meta{display:flex;gap:10px;flex-wrap:wrap;color:var(--muted);font-size:13px}
-  .chip{display:inline-flex;gap:8px;align-items:center;padding:4px 10px;border:1px solid var(--line);border-radius:999px;background:var(--chip);font-size:12px;font-weight:800;color:#7a5a12}
+  .masthead{
+    display:flex;align-items:center;justify-content:space-between;
+    padding:10px 14px;border-bottom:1px solid var(--line);background:linear-gradient(180deg,#fafafa,#f4f6f8);
+  }
+  .papername{font-weight:900;letter-spacing:.5px}
+  .dateline{font-size:12px;color:var(--muted)}
+  .headline{font-size:26px;line-height:1.22;margin:14px;font-weight:800}
+  .deck{margin:0 14px 14px;color:#4a5563}
+  .by{margin:0 14px 14px;color:#6b7280;font-size:12px}
   /* sections */
-  section{padding:28px 0;border-top:1px dashed var(--line)}
+  section{padding:28px 0;border-top:1px solid var(--line)}
   h2{margin:0 0 8px 0;font-size:22px}
   .grid-3{display:grid;grid-template-columns:1fr 1fr 1fr;gap:14px}
   @media (max-width:980px){.grid-3{grid-template-columns:1fr}}
-  .k{padding:16px;border:1px solid var(--line);border-radius:12px;background:var(--card)}
+  .k{padding:16px;border:1px solid var(--line);border-radius:12px;background:#fff}
   .k .big{font-size:18px;font-weight:900}
-  /* footer */
-  footer{padding:20px 0;color:var(--muted);font-size:12px;border-top:1px dashed var(--line);text-align:center}
+  footer{padding:22px 0;color:#6a7380;font-size:12px;border-top:1px solid var(--line);text-align:center}
+  /* subtle tag */
+  .tag{display:inline-flex;gap:8px;align-items:center;padding:3px 9px;border:1px solid var(--line);border-radius:999px;background:#f4f7fa;font-size:12px;font-weight:800;color:#445}
 </style>
 </head>
 <body>
 <header>
   <div class="wrap nav">
     <div class="brand">
-      <div class="logo">IN</div>
+      <!-- inline logo -->
+      <svg class="logo" viewBox="0 0 64 64" aria-hidden="true">
+        <defs>
+          <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
+            <stop offset="0" stop-color="#276fca"/><stop offset="1" stop-color="#1f7a5e"/>
+          </linearGradient>
+        </defs>
+        <rect rx="12" ry="12" x="2" y="2" width="60" height="60" fill="url(#g)"></rect>
+        <circle cx="32" cy="26" r="12" fill="#ffffff" opacity=".95"></circle>
+        <path d="M16 44c4-6 12-10 16-10s12 4 16 10" stroke="#ffffff" stroke-width="4" fill="none" stroke-linecap="round"/>
+      </svg>
       <h1 class="title">Crystal Ball — India</h1>
     </div>
     <a class="cta" href="play.html">Play now →</a>
@@ -92,56 +110,50 @@
 </header>
 
 <main class="wrap">
-  <!-- HERO -->
   <div class="hero">
     <div>
-      <h1>Turn today’s news into one clean wealth decision.</h1>
-      <p>Read a real headline the way people actually read it—unmasked and in context. Make a single call: will your capital grow or shrink by day’s close? Track how compounding reacts to your decisions over a pack of dates.</p>
+      <h1>One clean wealth decision from a monthly headline.</h1>
+      <p>Read a real headline the way you actually see it. Make a single call for that month: will your capital grow or shrink by month‑end close? We show how compounding responds across the year.</p>
       <div class="actions">
         <a class="btn primary" href="play.html">Play now</a>
         <a class="btn secondary" href="#how">How it works</a>
       </div>
-      <p class="meta" style="margin-top:10px">No ads. No fees. Just clear decisions and transparent results.</p>
+      <p style="margin-top:10px;color:var(--muted)">No ads. No fees. Transparent math. Educational only.</p>
     </div>
     <div class="card">
       <div class="in">
-        <div class="preview">
-          <p class="headline">RBI holds rates; flags inflation risks from global trade and weather</p>
-          <div class="meta">
-            <span class="chip">Today‑style news</span>
-            <span>Source: major outlet</span>
-            <span>Time‑stamp included</span>
+        <div class="article" aria-label="Article window">
+          <div class="masthead">
+            <div class="papername">Daily Ledger</div>
+            <div class="dateline">Mumbai • 9:15 IST</div>
           </div>
-          <p class="meta" style="margin:6px 0 0 0">Make your call. We settle against that day’s NIFTY 50 close vs prior close.</p>
+          <h3 class="headline">RBI holds rates; policy stance unchanged as inflation risks watched</h3>
+          <p class="deck">Markets look for signals on liquidity and growth. Analysts expect calm, but surprises happen.</p>
+          <p class="by">Source example: Reuters / Official releases (production build uses real links)</p>
         </div>
+        <p style="margin:10px 2px 0;color:var(--muted);font-size:12px">The game presents a monthly headline and settles on the NIFTY 50 month‑end close vs prior month‑end close.</p>
       </div>
     </div>
   </div>
 
-  <!-- HOW -->
   <section id="how">
     <h2>How it works</h2>
     <div class="grid-3">
       <div class="k">
-        <div class="big">1) See the headline</div>
-        <p class="meta">We show a real, time‑stamped headline (unmasked). You read it as you normally would.</p>
+        <div class="big">1) See the month’s headline</div>
+        <p class="muted">Unmasked, as published. Timed and sourced (Reuters / official). </p>
+        <span class="tag">Monthly cadence</span>
       </div>
       <div class="k">
-        <div class="big">2) Make a wealth decision</div>
-        <p class="meta">Pick <strong>UP</strong> or <strong>DOWN</strong>. It’s not about being clever—it’s about being consistent.</p>
+        <div class="big">2) Make one decision</div>
+        <p class="muted">Pick <strong>UP</strong> or <strong>DOWN</strong>. We mix in “gotcha” months—where the obvious read would’ve misled.</p>
+        <span class="tag">Right/Wrong tracked</span>
       </div>
       <div class="k">
-        <div class="big">3) Watch compounding respond</div>
-        <p class="meta">We update your bank after each round and show cumulative P&amp;L and average daily return.</p>
+        <div class="big">3) Learn via compounding</div>
+        <p class="muted">We update your bank and show monthly return and annualized return (CAGR) as you progress.</p>
+        <span class="tag">Transparent returns</span>
       </div>
-    </div>
-  </section>
-
-  <!-- Notes -->
-  <section id="notes">
-    <h2>Designed to teach, not to hype</h2>
-    <div class="k" style="margin-top:8px">
-      <p class="meta">This is a decision‑making exercise. Headlines are shown as published; outcomes are based on the NIFTY 50 close‑to‑close return for those dates. No leverage sliders, no distractions—just a clean loop that lets you see how your choices affect wealth over time.</p>
     </div>
   </section>
 </main>
